--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
- "homepage": "https://sanketdorle-github.github.io/task_track_tower",
-
+ 
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "vite build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
+    
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
